--- a/skysub.tex
+++ b/skysub.tex
@@ -386,11 +386,10 @@ This scaling is determined by the modal pixel level measured on each detector fo
 To avoid bias in the sky estimate, we also build masks for any pixels that do not sample blank sky.
 \sw{Source Extractor} \citep{Bertin:1996} is used to define stars and background galaxies (we use \iiwione\ \texttt{*p.fits} images to detector sources), while hand-drawn polygon regions cover diffraction spikes and the diffuse halos around bright galactic stars. These masks, along with the \iiwione\ bad pixel mask, are combined with \sw{WeightWatcher} \citep{Marmo:2008}.
 For each detector, we compute the median sky level seen by that chip: $\beta_j = \mathrm{median}(\alpha_{1,j}, \alpha_{2,j}\ldots \alpha_{n,j} )$.
-Further, we also compute $S$, the median of all levels $\alpha_{i,j}$.
+Further, we also compute $S$, the median of median chip levels: $S=\mathrm{median}(\beta_j)$.
 Then each the sky image is scaled by the factor $\mathcal{F}_{ij} = \mathrm{median}(\beta_1, \beta_2, \beta_3, \beta_4) / (\alpha_{ij} S)$.
-Note that the ratio of $\mathrm{median}(\beta_1, \beta_2, \beta_3, \beta_4) / \alpha_{ij}$ scales each frame to a common level is a detector stack, and unifies the zeropoints across the array.
-The factor of $S$ normalizes the sky flat.
-In \Fig{fw100k_zpdiff} we show the distribution of flux scale factors in each chip relative to WIRCam detector \#1 (NW quadrant), which can effectively be interpreted as chip-to-chip zeropoint offsets.
+Note that the factor $\alpha_{ij}^{-1}$ normalizes each image to the same level for stacking, while the ratio $\beta_j / S$ adjusts the level of each chip according to chip-to-chip zeropoint offsets.
+Indeed, chip-to-chip zeropoint offsets can be measured as $-2.5 \log_{10}(\beta_i / \beta_1)$, as done in \Fig{fw100k_zpdiff}.
 WIRCam detector \#1 (North-West quadrant) is clearly the most sensitive, but the unexpectedly broad distribution in zeropoint differences that may be indicative of variable gain in the WIRCam detectors.
 
 The flat itself is built by median combination.
